--- a/static/result.html
+++ b/static/result.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="static/scripts/plugin-active.js"></script>
   </head>
   <body>
-    <section id="Services">
+    <section id="Challenge">
       <div class="container">
         <h2>あなたの正答率は%acc%%です</h2>
         <br />
